--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.demo/com.example.demo.AutoTestingApplication</mainClass>
+                            <mainClass>com.project.demo/com.project.testapplication.AutoTestingApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
